# asac-works

./: .env  .env_example  .gitignore  README.md  about.html  accounting.html  data.js  docker-compose.yml  index.html  notes.md  package-lock.json  package.json  pyproject.toml  recursion.test.js  regex.test.js  server.js
Challenge06/: Challenge06.js  Challenge06.test.js
Challenge07/: Challenge07.js
Challenge08/: Challenge08.js
Challenge09/: Challenge09.js  Challenge09.test.js
Challenge11/: Challenge11.js  Challenge11.test.js
Class-01/: README.md
Class-02/: README.md
Class-04/: README.md
Class-05/: README.md
Class-06/: README.md
Class-07/: README.md
Class-08/: README.md
Class-09/: README.md
Class-10/: README.md
Class-11/: README.md
Class-12/: README.md
Class-13/: README.md
Class-14/: README.md
Class-15/: README.md
Class-16/: README.md
Class-17/: README.md
Class-26/: README.md
Class-27/: README.md
Class-28/: README.md
Command-line/: README.md
Cookie-Stand-API/: api_tester.py
Cookie-Stand-Admin/: .gitignore
Drf-API-Permissions-Postgres/: README.md  docker-compose.yml
Drf-Auth/: pyproject.toml
HRMS/: README.md
Learning_Forces/: README.md
Lesson-1/: README.md
Lesson-2/: README.md
Lesson-3/: README.md
Madlib-Cli/: pyproject.toml
Math-Series/: .gitignore  pyproject.toml
Movies-Library/: server.js
Prep_Mindset/: README.md
Read-01/: README.md
Read-02/: README.md
Read-03/: README.md
Read-04/: README.md
Read-05/: README.md
Read-07/: README.md
Read-08/: README.md
Read-09/: README.md
js/: app.js  (+1 more)
(+436 files in other folders)
