[tool.poetry]
name = "dj-snacks-rest"
version = "0.1.0"
description = ""
authors = ["makkahwi <suhaibahmadai@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-filter = "^21.1"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
